--- a/PasswordManager3342/passwordManagment.html
+++ b/PasswordManager3342/passwordManagment.html
@@ -43,7 +43,7 @@
     </form>
 </head>
 <body>
-   
+
     <!-- <script src="js/jquery-3.3.1.min.js"></script>-->
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -146,6 +146,10 @@
 
         </tbody>
     </table>
+
+    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal2">
+        Create New Password
+    </button>
     <!--Edit Password Modal-->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -208,12 +212,94 @@
                             Looks good!
                         </div>
                     </div>
-
-
+                    <div class="col-12">
+                        <br />
+                        <button class="btn btn-secondary" type="submit">Generate Password</button>
+                        <input type="text" class="form-control" id="validationCatagory" value="">
+                    </div>
                     <div class="col-12">
                         <br />
                         <button class="btn btn-secondary" type="submit">Save Changes</button>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--New Password Modal-->
+    <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Edit Password</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body row g-3">
+                    <div class="col-md-10">
+                        <label for="validationPreviousPassword" class="form-label">New Password:</label>
+                        <div class="input-group has-validation">
+
+                            <input type="text" class="form-control" id="newPassword" aria-describedby="inputGroupPrepend" required="">
+                            <div class="invalid-feedback">
+                                Please input the New password.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-10">
+                        <label for="validationPreviousPassword" class="form-label">New Password Again:</label>
+                        <div class="input-group has-validation">
+
+                            <input type="text" class="form-control" id="validationNewPassword" aria-describedby="inputGroupPrepend" required="">
+                            <div class="invalid-feedback">
+                                Please input the new password Again.
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5">
+                        <label for="validationName" class="form-label">Name:</label>
+                        <input type="text" class="form-control" id="validationName" value="" required="">
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <label for="validationUserName" class="form-label">User Name:</label>
+                        <input type="text" class="form-control" id="validationUserName" value="" required="">
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+
+                    <div class="col-md-5">
+                        <label for="validationURL" class="form-label">Website URL:</label>
+                        <input type="text" class="form-control" id="validationURL" value="" required="">
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <label for="validationCatagory" class="form-label">Catagory:</label>
+                        <input type="text" class="form-control" id="validationCatagory" value="" required="">
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <br />
+                        <button class="btn btn-secondary" type="submit">Generate Password</button>
+                        <input type="text" class="form-control" id="validationCatagory" value="">
+                    </div>
+
+                    <div class="col-12">
+                        <br />
+                        <button class="btn btn-secondary" type="submit">Create Password</button>
+                    </div>
+
                 </div>
             </div>
         </div>
