--- a/PasswordManager3342/passwordManagment.html
+++ b/PasswordManager3342/passwordManagment.html
@@ -45,6 +45,7 @@
 <body>
 
     <!-- <script src="js/jquery-3.3.1.min.js"></script>-->
+    <script src="js/passwordPage.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
