Part way for edit password integration

--- a/PasswordManager3342/passwordManagment.html
+++ b/PasswordManager3342/passwordManagment.html
@@ -45,9 +45,11 @@
 <body>
 
     <!-- <script src="js/jquery-3.3.1.min.js"></script>-->
+    <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/passwordPage.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+
 
 
     <script>
@@ -220,7 +222,11 @@
                     </div>
                     <div class="col-12">
                         <br />
-                        <button class="btn btn-secondary" type="submit">Save Changes</button>
+                        <button class="btn btn-secondary" id="updatePassBtn" type="submit">Save Changes</button>
+                    </div>
+                    <div class="col-12">
+                        <br /><br />
+                        <button class="btn btn-secondary" id="deletePassBtn" type="submit">Delete Password</button>
                     </div>
                 </div>
             </div>
