--- a/PasswordManager3342/passwordManagment.html
+++ b/PasswordManager3342/passwordManagment.html
@@ -3,12 +3,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Favicons -->
+    <link rel="icon" href="images/favicon.jpg">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
 
-    <title></title>
+    <title>Password Manager</title>
+
     <form id="form1" runat="server">
         <div runat="server">
             <nav class="navbar navbar-expand-lg navbar-dark bg-white">
@@ -88,7 +92,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <!--<tr>
                 <td>Netflix</td>
                 <td>ArealEmail@hotmail.com</td>
                 <td>https://www.netflix.com/</td>
@@ -143,7 +147,7 @@
                     </button>
                 </td>
             </tr>
-
+            -->
         </tbody>
     </table>
 
@@ -214,9 +218,21 @@
                     </div>
                     <div class="col-12">
                         <br />
-                        <button class="btn btn-secondary" type="submit">Generate Password</button>
-                        <input type="text" class="form-control" id="validationCatagory" value="">
+                        <button class="btn btn-secondary" type="submit" onclick="generatePassword();">Generate Password</button>
+                        <input type="text" class="form-control" id="outputPassword" value="">
                     </div>
+                    <script>
+                        function generatePassword() {
+                            var length = 12,
+                                charset = "abc-[[]]{}{}!@#$%&*()%!de)fg(hijk@lmnopqrst#uvwxyzA$BCDE%)FGH^IJKLMN&O(PQRS&TUVWX*YZ012*3456_789",
+                                wordset = ["Tabasco", "Kitten", "Botle", ]
+                                retVal = "";
+                            for (var i = 0, n = charset.length; i < length; ++i) {
+                                retVal += charset.charAt(Math.floor(Math.random() * n));
+                            }
+                            document.getElementById('outputPassword').value = retVal;
+                        }
+                    </script>
                     <div class="col-12">
                         <br />
                         <button class="btn btn-secondary" type="submit">Save Changes</button>
@@ -231,7 +247,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Edit Password</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">New Password</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -292,9 +308,15 @@
                     <div class="col-12">
                         <br />
                         <button class="btn btn-secondary" type="submit">Generate Password</button>
-                        <input type="text" class="form-control" id="validationCatagory" value="">
+                        <input type="text" class="form-control" id="generatePassword" value="">
                     </div>
-
+                    <script>
+                        $(document).ready(function () {
+                            $('#generatePassword').click(function () {
+                                Math.random().toString(36).slice(2, 10)
+                            });
+                        });
+                    </script>
                     <div class="col-12">
                         <br />
                         <button class="btn btn-secondary" type="submit">Create Password</button>
