--- a/PasswordManager3342/passwordManagment.html
+++ b/PasswordManager3342/passwordManagment.html
@@ -41,8 +41,6 @@
                 </nav>
             </div>
 
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
         </div>
     </form>
 </head>
@@ -219,19 +217,46 @@
                     </div>
                     <div class="col-12">
                         <br />
-                        <button class="btn btn-secondary" type="submit" onclick="generatePassword();">Generate Password</button>
-                        <input type="text" class="form-control" id="outputPassword" value="">
+                        <button class="btn btn-secondary" type="submit" onclick="generatePassword2();">Generate Password</button>
+                        <input type="text" class="form-control" id="outputPassword2" value="">
                     </div>
                     <script>
-                        function generatePassword() {
-                            var length = 12,
+                        function generatePassword2() {
+                            var length = 2,
                                 charset = "abc-[[]]{}{}!@#$%&*()%!de)fg(hijk@lmnopqrst#uvwxyzA$BCDE%)FGH^IJKLMN&O(PQRS&TUVWX*YZ012*3456_789",
-                                wordset = ["Tabasco", "Kitten", "Botle", ]
+                                wordset = ["Tabasco", "Kitten", "Botle", "aegises", "aeglogue", "aeglogues", "aegrotat", "aegrotats", "aemule", "aemuled",
+                                    "aemules", "aemuling", "aeneous", "aeneus", "aeolian", "aeolipile", "aeolipiles", "aeolipyle", "aeolipyles", "aeolotropic",
+                                    "aeolotropies", "aeolotropy", "aeon", "aeonian", "aeonic", "aeons", "aepyornis", "aepyornises", "aequorin", "aequorins", "aerate",
+                                    "aerated", "aerates", "aerating", "aeration", "aerations", "aerator", "aerators", "aerenchyma", "aerenchymas", "aerenchymata",
+                                    "aerenchymatous", "aerial", "aerialist", "aerialists", "aerialities", "aeriality", "aerially", "aerials", "aerie", "aeried",
+                                    "aerier", "zylonites","zymase","zymases","zyme","zymes","zymic","zymite","zymites","zymogen","zymogene","zymogenes","zymogeneses",
+                                    "zymogenesis", "zymogenic", "zymogens", "zymogram", "zymograms", "zymoid", "zymologic", "zymological", "zymologies", "zymologist",
+                                    "zymologists", "zymology", "zymolyses", "zymolysis", "zymolytic", "zymome", "zymomes", "zymometer", "zymometers", "zymosan",
+                                    "zymosans", "zymoses", "zymosimeter", "zymosimeters", "zymosis", "zymotechnic", "zymotechnical", "zymotechnics", "zymotic",
+                                    "zymotically", "zymotics", "zymurgies", "zymurgy", "zythum", "zythums", "zyzzyva", "zyzzyvas", "manganates", "manganese",
+                                    "manganeses", "manganesian", "manganic", "manganiferous", "manganin", "manganins", "manganite", "manganites", "manganous",
+                                    "mangas", "mange", "mangeao", "mangeaos", "manged", "mangel", "mangels", "mangelwurzel", "mangelwurzels", "mangemange",
+                                    "mangemanges", "manger", "mangers", "manges", "mangetout", "mangetouts", "mangey", "mangier", "mangiest", "mangily",
+                                    "manginess", "manginesses", "manging", "mangle", "mangled", "mangler", "manglers", "mangles", "mangling", "mango", "mangoes",
+                                    "mangold", "mangolds", "mangoldwurzel", "mangoldwurzels", "mangonel", "mangonels", "mangos", "mangostan", "mangostans",
+                                    "mangosteen", "mangosteens", "mangouste", "mangoustes", "mangrove", "mangroves", "mangs", "mangulate", "mangulated", "mangulates",
+                                    "mangulating", "mangy", "manhandle", "manhandled", "manhandles", "manhandling", "manhattan", "manhattans", "manhole",
+                                    "manholes", "manhood", "manhoods", "manhunt", "manhunter", "manhunters", "manhunts", "mani", "mania", "maniac", "maniacal",
+                                    "maniacally", "maniacs", "manias", "manic", "manically", "manicotti", "manicottis", "manics", "manicure", "manicured",
+                                    "manicures", "manicuring", "manicurist", "manicurists", "manies", "manifest", "manifestable", "manifestant", "manifestants",
+                                    "manifestation", "manifestational", "manifestations", "manifestative", "manifested", "manifester", "manifesters", "manifestible",
+                                    "manifesting", "manifestly", "manifestness", "manifestnesses", "manifesto", "manifestoed", "manifestoes", "manifestoing",
+                                    "manifestos", "manifests", "manifold", "manifolded", "manifolder", "manifolders", "manifolding", "manifoldly", "manifoldness",
+                                    "manifoldnesses", "manifolds", "maniform", "manihoc", "manihocs", "manihot", "manihots", "manikin", "manikins", "manila", "manilas"]
                                 retVal = "";
                             for (var i = 0, n = charset.length; i < length; ++i) {
                                 retVal += charset.charAt(Math.floor(Math.random() * n));
+                                retVal += charset.charAt(Math.floor(Math.random() * n));
+                                retVal += wordset[Math.floor(Math.random() * wordset.length)];
+                                retVal += charset.charAt(Math.floor(Math.random() * n));
+                                retVal += charset.charAt(Math.floor(Math.random() * n));
                             }
-                            document.getElementById('outputPassword').value = retVal;
+                            document.getElementById('outputPassword2').value = retVal;
                         }
                     </script>
                     <div class="col-12">
@@ -304,22 +329,54 @@
                             Looks good!
                         </div>
                     </div>
-
                     <div class="col-12">
                         <br />
+                        <button class="btn btn-secondary" type="submit" onclick="generatePassword();">Generate Password</button>
+                        <input type="text" class="form-control" id="outputPassword" value="">
                     </div>
                     <script>
-                        $(document).ready(function () {
-                            $('#generatePassword').click(function () {
-                                Math.random().toString(36).slice(2, 10)
-                            });
-                        });
+                        function generatePassword() {
+                            var length = 2,
+                                charset = "abc-[[]]{}{}!@#$%&*()%!de)fg(hijk@lmnopqrst#uvwxyzA$BCDE%)FGH^IJKLMN&O(PQRS&TUVWX*YZ012*3456_789",
+                                 wordset = ["Tabasco", "Kitten", "Botle", "aegises", "aeglogue", "aeglogues", "aegrotat", "aegrotats", "aemule", "aemuled",
+                                    "aemules", "aemuling", "aeneous", "aeneus", "aeolian", "aeolipile", "aeolipiles", "aeolipyle", "aeolipyles", "aeolotropic",
+                                    "aeolotropies", "aeolotropy", "aeon", "aeonian", "aeonic", "aeons", "aepyornis", "aepyornises", "aequorin", "aequorins", "aerate",
+                                    "aerated", "aerates", "aerating", "aeration", "aerations", "aerator", "aerators", "aerenchyma", "aerenchymas", "aerenchymata",
+                                    "aerenchymatous", "aerial", "aerialist", "aerialists", "aerialities", "aeriality", "aerially", "aerials", "aerie", "aeried",
+                                    "aerier", "zylonites","zymase","zymases","zyme","zymes","zymic","zymite","zymites","zymogen","zymogene","zymogenes","zymogeneses",
+                                    "zymogenesis", "zymogenic", "zymogens", "zymogram", "zymograms", "zymoid", "zymologic", "zymological", "zymologies", "zymologist",
+                                    "zymologists", "zymology", "zymolyses", "zymolysis", "zymolytic", "zymome", "zymomes", "zymometer", "zymometers", "zymosan",
+                                    "zymosans", "zymoses", "zymosimeter", "zymosimeters", "zymosis", "zymotechnic", "zymotechnical", "zymotechnics", "zymotic",
+                                    "zymotically", "zymotics", "zymurgies", "zymurgy", "zythum", "zythums", "zyzzyva", "zyzzyvas", "manganates", "manganese",
+                                    "manganeses", "manganesian", "manganic", "manganiferous", "manganin", "manganins", "manganite", "manganites", "manganous",
+                                    "mangas", "mange", "mangeao", "mangeaos", "manged", "mangel", "mangels", "mangelwurzel", "mangelwurzels", "mangemange",
+                                    "mangemanges", "manger", "mangers", "manges", "mangetout", "mangetouts", "mangey", "mangier", "mangiest", "mangily",
+                                    "manginess", "manginesses", "manging", "mangle", "mangled", "mangler", "manglers", "mangles", "mangling", "mango", "mangoes",
+                                    "mangold", "mangolds", "mangoldwurzel", "mangoldwurzels", "mangonel", "mangonels", "mangos", "mangostan", "mangostans",
+                                    "mangosteen", "mangosteens", "mangouste", "mangoustes", "mangrove", "mangroves", "mangs", "mangulate", "mangulated", "mangulates",
+                                    "mangulating", "mangy", "manhandle", "manhandled", "manhandles", "manhandling", "manhattan", "manhattans", "manhole",
+                                    "manholes", "manhood", "manhoods", "manhunt", "manhunter", "manhunters", "manhunts", "mani", "mania", "maniac", "maniacal",
+                                    "maniacally", "maniacs", "manias", "manic", "manically", "manicotti", "manicottis", "manics", "manicure", "manicured",
+                                    "manicures", "manicuring", "manicurist", "manicurists", "manies", "manifest", "manifestable", "manifestant", "manifestants",
+                                    "manifestation", "manifestational", "manifestations", "manifestative", "manifested", "manifester", "manifesters", "manifestible",
+                                    "manifesting", "manifestly", "manifestness", "manifestnesses", "manifesto", "manifestoed", "manifestoes", "manifestoing",
+                                    "manifestos", "manifests", "manifold", "manifolded", "manifolder", "manifolders", "manifolding", "manifoldly", "manifoldness",
+                                    "manifoldnesses", "manifolds", "maniform", "manihoc", "manihocs", "manihot", "manihots", "manikin", "manikins", "manila", "manilas"]
+                                retVal = "";
+                            for (var i = 0, n = charset.length; i < length; ++i) {
+                                retVal += charset.charAt(Math.floor(Math.random() * n));
+                                retVal += charset.charAt(Math.floor(Math.random() * n));
+                                retVal += wordset[Math.floor(Math.random() * wordset.length)];
+                                retVal += charset.charAt(Math.floor(Math.random() * n));
+                                retVal += charset.charAt(Math.floor(Math.random() * n));
+                            }
+                            document.getElementById('outputPassword').value = retVal;
+                        }
                     </script>
                     <div class="col-12">
                         <br />
-                        <button class="btn btn-secondary" id="newPasswordBtn" type="submit">Create Password</button>
+                        <button class="btn btn-secondary" type="submit">Create Password</button>
                     </div>
-
                 </div>
             </div>
         </div>
